hopefully fix word wrap issue on mobile

--- a/site/styles/common.scss
+++ b/site/styles/common.scss
@@ -40,6 +40,7 @@ main {
     $padding-y: (frame.$height + 1rem);
     padding: $padding-y 1rem $padding-y 1rem;
     max-width: 50rem;
+    width: 80vw;
     margin-left: auto;
     margin-right: auto;
 
